--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ap-south-1 # Update to your region if different
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -25,4 +30,4 @@ jobs:
         run: terraform -chdir=terraform apply -auto-approve
 
       - name: Notify Deployment
-        run: echo "Medusa deployment completed."
+        run: echo "✅ Medusa deployment completed."
