--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,11 +1,16 @@
 name: Destroy Medusa Infrastructure
 
 on:
-  workflow_dispatch:  # lets you manually trigger the workflow in GitHub UI
+  workflow_dispatch:
 
 jobs:
   destroy:
     runs-on: ubuntu-latest
+
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ap-south-1  # ✅ Add your AWS region here
 
     steps:
       - name: Checkout repo
